Refactor Margin Calculator layout and functionality
Updated styling and functionality for the Margin Calculator, including improved layout, added reset button, and enhanced user interaction features.

--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <link rel="icon" type="image/png" href="favicon.png">
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Margin Calculator</title>
+
+  <!-- Browser tab icon -->
+  <link rel="icon" type="image/png" href="favicon.png">
+
   <style>
     :root{
       --bg:#0b1020; --card:#121a33; --muted:#a9b3d1; --text:#eaf0ff;
@@ -20,8 +23,33 @@
       background: radial-gradient(1200px 800px at 20% 0%, #16214a, var(--bg));
       color:var(--text);
     }
-    .wrap{ max-width: 1100px; margin:auto; padding: 28px 16px 40px; }
-    h1{ margin:0 0 6px; font-size:28px; }
+    .wrap{ max-width: 1100px; margin:auto; padding: 24px 16px 40px; }
+
+    .titleRow{
+      display:flex;
+      align-items:center;
+      gap:12px;
+      margin-bottom: 8px;
+    }
+    .brandIcon{
+      width:40px;
+      height:40px;
+      border-radius: 12px;
+      border: 1px solid rgba(255,255,255,.14);
+      background: rgba(0,0,0,.20);
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      overflow:hidden;
+      box-shadow: 0 8px 16px rgba(0,0,0,.25);
+    }
+    .brandIcon img{
+      width:28px;
+      height:28px;
+      display:block;
+    }
+
+    h1{ margin:0; font-size:28px; }
     p.sub{ margin:0 0 18px; color:var(--muted); }
 
     .layout{
@@ -89,6 +117,7 @@
     .stepBtns{
       display:flex;
       gap:6px;
+      align-items:flex-end;
     }
     .stepBtns button{
       padding:10px 10px;
@@ -101,9 +130,24 @@
       cursor:pointer;
       min-width:44px;
     }
-    .stepBtns button:hover{
-      background:var(--chipOn);
+    .stepBtns button:hover{ background:var(--chipOn); }
+
+    .actionsRow{
+      display:flex;
+      gap:8px;
+      margin-top: 10px;
+      flex-wrap:wrap;
     }
+    .actionBtn{
+      padding:10px 12px;
+      border-radius:12px;
+      border:1px solid var(--chipBorder);
+      background:var(--chip);
+      color:var(--text);
+      font-weight:800;
+      cursor:pointer;
+    }
+    .actionBtn:hover{ background:var(--chipOn); }
 
     table{
       width:100%;
@@ -133,25 +177,26 @@
     .right{ text-align:right; }
 
     /* Highlight standard row */
-    tr.standard{
-      background: rgba(255, 215, 0, 0.18);
-    }
-    tr.standard td:first-child{
-      border-left: 4px solid #ffd700;
-    }
+    tr.standard{ background: rgba(255, 215, 0, 0.18); }
+    tr.standard td:first-child{ border-left: 4px solid #ffd700; }
 
-    /* Bold GP% column */
-    td.gpCol{
-      font-weight:800;
-    }
+    /* Bold the entire GP% column */
+    td.gpCol{ font-weight:800; }
 
-    .hint{ font-size:12px; color:var(--muted); margin-top:10px; }
+    .hint{ font-size:12px; color:var(--muted); margin-top:10px; line-height:1.35; }
   </style>
 </head>
 <body>
 <div class="wrap">
-  <h1>Margin Calculator</h1>
-  <p class="sub">Cost ex GST · RRP inc GST · GST fixed at 15%</p>
+  <div class="titleRow">
+    <div class="brandIcon" aria-hidden="true">
+      <img src="favicon.png" alt="">
+    </div>
+    <div>
+      <h1>Margin Calculator</h1>
+      <p class="sub">Cost ex GST · RRP inc GST · GST fixed at 15% · Default RRP = Cost × 1.84 × 1.15 → rounded to .99</p>
+    </div>
+  </div>
 
   <div class="layout">
     <!-- MAIN -->
@@ -165,24 +210,28 @@
       <section class="panel active" id="panel-cost">
         <div class="field">
           <label>Cost (ex GST)</label>
-          <input id="cost" type="number" step="0.01">
+          <input id="cost" type="number" step="0.01" inputmode="decimal" placeholder="e.g. 100.00">
         </div>
 
         <div class="field">
           <label>RRP (inc GST)</label>
           <div class="rrpRow">
-            <input id="rrpInc" type="number" step="0.01">
-            <div class="stepBtns">
-              <button data-step="-10">-10</button>
-              <button data-step="-1">-1</button>
-              <button data-step="1">+1</button>
-              <button data-step="10">+10</button>
+            <input id="rrpInc" type="number" step="0.01" inputmode="decimal" placeholder="auto-suggests after cost">
+            <div class="stepBtns" aria-label="RRP step buttons">
+              <button type="button" data-step="-10">-10</button>
+              <button type="button" data-step="-1">-1</button>
+              <button type="button" data-step="1">+1</button>
+              <button type="button" data-step="10">+10</button>
             </div>
           </div>
         </div>
 
+        <div class="actionsRow">
+          <button type="button" class="actionBtn" id="resetBtn">Reset</button>
+        </div>
+
         <div class="hint">
-          Enter moves Cost → RRP. Use buttons for quick price nudges.
+          Enter moves Cost → RRP. RRP step buttons are great for quick nudges. Yellow row = current RRP. GP% column is bold.
         </div>
       </section>
 
@@ -190,11 +239,11 @@
       <section class="panel" id="panel-margin">
         <div class="field">
           <label>Cost (ex GST)</label>
-          <input id="cost2" type="number" step="0.01">
+          <input id="cost2" type="number" step="0.01" inputmode="decimal">
         </div>
         <div class="field">
           <label>Target GP%</label>
-          <input id="targetGp" type="number" step="0.01">
+          <input id="targetGp" type="number" step="0.01" inputmode="decimal">
         </div>
 
         <table style="margin-top:10px;">
@@ -237,11 +286,32 @@
 
 <script>
   const GST = 1.15;
+  const DEFAULT_MULTIPLIER = 1.84;
 
   const $ = id => document.getElementById(id);
   const n = v => Number.isFinite(+v) ? +v : NaN;
   const money = v => Number.isFinite(v) ? v.toLocaleString("en-NZ",{style:"currency",currency:"NZD"}) : "$—";
   const pct = v => Number.isFinite(v) ? v.toFixed(2)+"%" : "—%";
+
+  // Psychological pricing: choose the nearest price that ends in .99
+  // e.g. candidates around v: floor(v)+0.99 and floor(v)+1.99, pick the closest
+  function roundToPsych99(v){
+    if(!Number.isFinite(v)) return v;
+    const base = Math.floor(v);
+    const a = base + 0.99;
+    const b = base + 1.99;
+    // handle tiny values cleanly
+    const candidates = [a, b].filter(x => x >= 0.99);
+    let best = candidates[0];
+    let bestDist = Math.abs(v - best);
+    for(const c of candidates){
+      const d = Math.abs(v - c);
+      if(d < bestDist){
+        best = c; bestDist = d;
+      }
+    }
+    return Math.round(best * 100) / 100;
+  }
 
   function calc(costEx, rrpInc){
     const sellEx = rrpInc / GST;
@@ -251,6 +321,26 @@
       gpPct: sellEx ? (gp$ / sellEx) * 100 : NaN,
       muPct: costEx ? (gp$ / costEx) * 100 : NaN
     };
+  }
+
+  let rrpManuallyEdited = false;
+
+  function suggestRrpIfBlank(){
+    const cost = n($("cost").value);
+    const rrpNow = $("rrpInc").value.trim();
+
+    // Only suggest if:
+    // - cost is valid
+    // - RRP field is empty
+    // - user hasn't started manually editing RRP
+    if(!Number.isFinite(cost) || cost <= 0) return;
+    if(rrpNow !== "") return;
+    if(rrpManuallyEdited) return;
+
+    const raw = cost * DEFAULT_MULTIPLIER * GST;
+    const suggested = roundToPsych99(raw);
+    $("rrpInc").value = suggested.toFixed(2);
+    updateCost();
   }
 
   function updateCost(){
@@ -303,31 +393,61 @@
     $("panel-cost").classList.toggle("active", isCost);
     $("panel-margin").classList.toggle("active", !isCost);
     $("tableCard").style.display = isCost ? "block" : "none";
+
+    $("tab-cost").setAttribute("aria-selected", isCost ? "true" : "false");
+    $("tab-margin").setAttribute("aria-selected", isCost ? "false" : "true");
   }
 
-  // Keyboard behaviour
+  // Keyboard: Enter in cost -> suggest RRP (if blank) then focus RRP
   $("cost").addEventListener("keydown", e => {
     if(e.key === "Enter"){
       e.preventDefault();
+      suggestRrpIfBlank();
       $("rrpInc").focus();
+      $("rrpInc").select();
     }
   });
+
+  // When cost changes, suggest RRP if blank (and user hasn't edited)
+  $("cost").addEventListener("blur", suggestRrpIfBlank);
+
+  // Track manual editing of RRP so we don't keep overriding suggestions
+  $("rrpInc").addEventListener("input", () => {
+    if($("rrpInc").value.trim() !== "") rrpManuallyEdited = true;
+    updateCost();
+  });
+
+  // Cost input updates table as well (if RRP present)
+  $("cost").addEventListener("input", updateCost);
 
   // Step buttons
   document.querySelectorAll(".stepBtns button").forEach(btn=>{
     btn.addEventListener("click", ()=>{
       const step = Number(btn.dataset.step);
       const rrp = n($("rrpInc").value) || 0;
-      $("rrpInc").value = (rrp + step).toFixed(2);
+      const next = rrp + step;
+      $("rrpInc").value = (Math.round(next * 100) / 100).toFixed(2);
+      rrpManuallyEdited = true;
       updateCost();
       $("rrpInc").focus();
     });
   });
 
+  // Reset
+  $("resetBtn").addEventListener("click", () => {
+    $("cost").value = "";
+    $("rrpInc").value = "";
+    $("gpTableBody").innerHTML = "";
+    rrpManuallyEdited = false;
+    showTab("cost");
+    $("cost").focus();
+  });
+
+  // Tabs
   $("tab-cost").onclick = () => showTab("cost");
   $("tab-margin").onclick = () => showTab("margin");
 
-  $("cost").oninput = $("rrpInc").oninput = updateCost;
+  // Margin tab events
   $("cost2").oninput = $("targetGp").oninput = updateMargin;
 
   // Init
