Restore index.html with updated content

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
     </div>
     <div>
       <h1>Margin Calculator</h1>
-      <p class="sub">Cost ex GST · RRP inc GST · GST fixed at 15% · Default RRP = Cost × 1.84 × 1.15 → rounded to .99</p>
+      <p class="sub">Cost ex GST · RRP inc GST · GST fixed at 15%</p>
     </div>
   </div>
 
@@ -286,7 +286,7 @@
 
 <script>
   const GST = 1.15;
-  const DEFAULT_MULTIPLIER = 1.84;
+  const DEFAULT_MULTIPLIER = 1.825;
 
   const $ = id => document.getElementById(id);
   const n = v => Number.isFinite(+v) ? +v : NaN;
@@ -456,3 +456,4 @@
 </script>
 </body>
 </html>
+
