--- a/index.html
+++ b/index.html
@@ -44,11 +44,7 @@
       box-shadow: 0 8px 16px rgba(0,0,0,.25);
       flex: 0 0 auto;
     }
-    .brandIcon img{
-      width:28px;
-      height:28px;
-      display:block;
-    }
+    .brandIcon img{ width:28px; height:28px; display:block; }
 
     h1{ margin:0; font-size:28px; }
     p.sub{ margin:0 0 18px; color:var(--muted); }
@@ -76,7 +72,7 @@
       margin-bottom:12px;
       padding-bottom:12px;
       border-bottom:1px solid var(--line);
-      flex-wrap: wrap;
+      flex-wrap:wrap;
     }
     .tabBtn{
       border:1px solid var(--chipBorder);
@@ -87,6 +83,8 @@
       font-weight:700;
       font-size:13px;
       cursor:pointer;
+      -webkit-tap-highlight-color: transparent;
+      touch-action: manipulation;
     }
     .tabBtn[aria-selected="true"]{
       background:var(--chipOn);
@@ -110,7 +108,7 @@
       display:flex;
       gap:8px;
       align-items:flex-end;
-      flex-wrap: wrap; /* important for iPhone */
+      flex-wrap:wrap; /* iPhone */
     }
 
     input{
@@ -137,39 +135,25 @@
       color: var(--text);
       user-select:none;
       white-space:nowrap;
-      flex: 0 0 auto;
+      flex:0 0 auto;
     }
-    .badgeDot{
-      width:8px; height:8px; border-radius:999px;
-      background: rgba(255,255,255,.55);
-    }
-    .badge.auto{
-      border-color: rgba(140,170,255,.45);
-      background: rgba(140,170,255,.16);
-    }
+    .badgeDot{ width:8px; height:8px; border-radius:999px; background: rgba(255,255,255,.55); }
+    .badge.auto{ border-color: rgba(140,170,255,.45); background: rgba(140,170,255,.16); }
     .badge.auto .badgeDot{ background: rgba(140,170,255,.95); }
-
-    .badge.manual{
-      border-color: rgba(255,215,0,.45);
-      background: rgba(255,215,0,.14);
-    }
+    .badge.manual{ border-color: rgba(255,215,0,.45); background: rgba(255,215,0,.14); }
     .badge.manual .badgeDot{ background: rgba(255,215,0,.95); }
 
     .stepBtns{
       display:flex;
       gap:6px;
       align-items:flex-end;
-      flex: 0 0 auto;
+      flex:0 0 auto;
     }
-    /* On small screens, put buttons on their own row and space them out */
     @media (max-width: 520px){
-      .stepBtns{
-        width:100%;
-        justify-content:space-between;
-      }
+      .stepBtns{ width:100%; justify-content:space-between; }
     }
     .stepBtns button{
-      padding:12px 12px;          /* bigger touch target */
+      padding:12px 12px;
       border-radius:10px;
       border:1px solid var(--chipBorder);
       background:var(--chip);
@@ -177,16 +161,18 @@
       font-size:13px;
       font-weight:700;
       cursor:pointer;
-      min-width:48px;             /* bigger touch target */
+      min-width:48px;
       -webkit-tap-highlight-color: transparent;
       touch-action: manipulation;
+      -webkit-user-select:none;
+      user-select:none;
     }
     .stepBtns button:hover{ background:var(--chipOn); }
 
     .actionsRow{
       display:flex;
       gap:8px;
-      margin-top: 10px;
+      margin-top:10px;
       flex-wrap:wrap;
     }
     .actionBtn{
@@ -227,16 +213,16 @@
       padding:10px;
       background:rgba(0,0,0,.24);
       border-bottom:1px solid rgba(255,255,255,.08);
-      white-space: nowrap;
-      position: sticky; /* nice on scroll */
-      top: 0;
-      z-index: 1;
+      white-space:nowrap;
+      position:sticky;
+      top:0;
+      z-index:1;
     }
     tbody td{
       padding:10px;
       border-bottom:1px solid rgba(255,255,255,.06);
       font-variant-numeric: tabular-nums;
-      white-space: nowrap;
+      white-space:nowrap;
       font-weight:400;
     }
     tbody tr:last-child td{ border-bottom:none; }
@@ -246,7 +232,7 @@
     tr.standard{ background: rgba(255, 215, 0, 0.18); }
     tr.standard td:first-child{ border-left: 4px solid #ffd700; }
 
-    /* Bold the entire GP% column */
+    /* Bold GP% column */
     td.gpCol{ font-weight:800; }
 
     .hint{ font-size:12px; color:var(--muted); margin-top:10px; line-height:1.35; }
@@ -282,13 +268,13 @@
         <div class="field">
           <div class="rrpMetaRow">
             <label>RRP (inc GST)</label>
-            <span class="badge auto" id="rrpModeBadge" title="Auto-suggests from Cost when RRP is blank. If you edit RRP it switches to MANUAL.">
+            <span class="badge auto" id="rrpModeBadge" title="AUTO updates from Cost. MANUAL stops updates. Clearing RRP leaves it blank.">
               <span class="badgeDot" aria-hidden="true"></span>
               <span id="rrpModeText">AUTO</span>
             </span>
           </div>
           <div class="rrpRow">
-            <input id="rrpInc" type="number" step="0.01" inputmode="decimal" placeholder="leave blank to auto-suggest">
+            <input id="rrpInc" type="number" step="0.01" inputmode="decimal" placeholder="auto-suggests from cost">
             <div class="stepBtns" aria-label="RRP step buttons">
               <button type="button" data-step="-10">-10</button>
               <button type="button" data-step="-1">-1</button>
@@ -303,7 +289,7 @@
         </div>
 
         <div class="hint">
-          Enter moves Cost → RRP. Clearing RRP leaves it blank (no forced auto-fill). Table shows ±$100 in $10 steps.
+          Enter moves Cost → RRP. Table shows ±$100 in $10 steps. Scroll inside the table on iPhone.
         </div>
       </section>
 
@@ -353,21 +339,21 @@
         </table>
       </div>
 
-      <div class="hint">Yellow row = current RRP. Scroll inside the table on small screens.</div>
+      <div class="hint">Yellow row = current RRP. Scroll table on small screens.</div>
     </aside>
   </div>
 </div>
 
 <script>
   const GST = 1.15;
-  const DEFAULT_MULTIPLIER = 1.84; // your chosen factor from cost -> RRP (inc GST)
+  const DEFAULT_MULTIPLIER = 1.84;
 
   const $ = id => document.getElementById(id);
   const n = v => Number.isFinite(+v) ? +v : NaN;
   const money = v => Number.isFinite(v) ? v.toLocaleString("en-NZ",{style:"currency",currency:"NZD"}) : "$—";
   const pct = v => Number.isFinite(v) ? v.toFixed(2)+"%" : "—%";
 
-  // Psychological pricing: nearest .99 (e.g. 199.99, 200.99 etc)
+  // Psychological pricing: nearest .99
   function roundToPsych99(v){
     if(!Number.isFinite(v)) return v;
     const base = Math.floor(v);
@@ -409,7 +395,7 @@
     const cost = n($("cost").value);
     if(!Number.isFinite(cost) || cost <= 0) return;
 
-    const raw = cost * DEFAULT_MULTIPLIER; // if you want GST here: * GST
+    const raw = cost * DEFAULT_MULTIPLIER; // (if you want GST here: * GST)
     const suggested = roundToPsych99(raw);
     $("rrpInc").value = suggested.toFixed(2);
     setRrpMode("auto");
@@ -470,12 +456,11 @@
     $("tab-margin").setAttribute("aria-selected", isCost ? "false" : "true");
   }
 
-  // Enter in cost -> if RRP blank and in AUTO, suggest then focus RRP
+  // Enter in cost -> keep flow to RRP
   $("cost").addEventListener("keydown", e => {
     if(e.key === "Enter"){
       e.preventDefault();
-      const rrpBlank = $("rrpInc").value.trim() === "";
-      if(!rrpManuallyEdited && rrpBlank){
+      if(!rrpManuallyEdited){
         suggestRrpFromCost();
       }
       updateCost();
@@ -484,18 +469,15 @@
     }
   });
 
-  // Cost changes: only suggest when RRP is blank AND we're not in manual mode
+  // FIX #2: Cost changes should always update RRP in AUTO mode (no "blank" requirement)
   $("cost").addEventListener("input", () => {
-    const rrpBlank = $("rrpInc").value.trim() === "";
-    if(!rrpManuallyEdited && rrpBlank){
+    if(!rrpManuallyEdited){
       suggestRrpFromCost();
     }
     updateCost();
   });
 
-  // Manual edit of RRP:
-  // - if user types something -> MANUAL, stop auto updates
-  // - if user clears it -> keep it blank, revert to AUTO, and clear the table (no forced refill)
+  // FIX #1: Clearing RRP should keep it blank (no forced auto-refill)
   $("rrpInc").addEventListener("input", () => {
     const val = $("rrpInc").value.trim();
 
@@ -506,15 +488,20 @@
       return;
     }
 
-    // Allow it to stay blank
+    // allow it to stay blank
     rrpManuallyEdited = false;
     setRrpMode("auto");
     $("gpTableBody").innerHTML = "";
   });
 
-  // Step buttons count as MANUAL
+  // Step buttons:
+  // - use pointerdown for snappy mobile response
+  // - prevent default so it doesn't steal focus
+  // - do NOT focus the input (prevents keyboard popup on iPhone)
   document.querySelectorAll(".stepBtns button").forEach(btn=>{
-    btn.addEventListener("click", ()=>{
+    btn.addEventListener("pointerdown", (e)=>{
+      e.preventDefault();
+
       const step = Number(btn.dataset.step);
       const rrp = n($("rrpInc").value) || 0;
       const next = rrp + step;
@@ -525,7 +512,6 @@
       setRrpMode("manual");
 
       updateCost();
-      $("rrpInc").focus();
     });
   });
 
@@ -537,7 +523,6 @@
     rrpManuallyEdited = false;
     setRrpMode("auto");
 
-    // Clear margin tab outputs/inputs
     $("cost2").value = "";
     $("targetGp").value = "";
     $("reqSell").textContent = "$—";
